<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_door_password"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".views.DoorPasswordActivity">

    <TextView
        android:id="@+id/text_passwd_door"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryText"
        android:text="@string/passwd_door"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="90dp" />

    <TextView
        android:id="@+id/text_door_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/door_number"
        android:textSize="24sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="25dp"/>

    <EditText
        android:id="@+id/edit_door_passwd"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:textSize="20sp"
        android:hint="@string/door_hint"
        android:inputType="numberPassword"/>

    <ImageButton
        android:id="@+id/img_open_door"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="120dp"
        android:scaleX="4"
        android:scaleY="4"
        android:src="@mipmap/ic_screen_lock_portrait_black_48dp"/>


</LinearLayout>