<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_choose_door"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".views.ChooseDoorActivity">

    <TextView
        android:id="@+id/text_choose_door"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryText"
        android:text="@string/choose_door"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="90dp"/>

    <RelativeLayout
        android:id="@+id/relative_layout_choose_door"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/img_door_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_screen_lock_portrait_black_48dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="65dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="65dp"
            />

        <ImageButton
            android:id="@+id/img_door_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_screen_lock_portrait_black_48dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="65dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="65dp"
            />

        <TextView
            android:id="@+id/text_door1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryText"
            android:text="@string/door1"
            android:layout_below="@id/img_door_1"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="70dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="70dp"
            />

        <TextView
            android:id="@+id/text_door2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryText"
            android:text="@string/door2"
            android:layout_below="@id/img_door_2"
            android:layout_alignParentRight="true"
            android:layout_marginRight="70dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="70dp"/>


        <!--<TextView
            android:id="@+id/text_ip_door1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ip_door1"
            android:layout_below="@id/text_door1"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="40dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="40dp"
            />

        <TextView
            android:id="@+id/text_ip_door2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ip_door2"
            android:layout_below="@id/text_door2"
            android:layout_alignParentRight="true"
            android:layout_marginRight="40dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="40dp"
            />-->

    </RelativeLayout>

</LinearLayout>